# try-fastapi

./: .example.env  .gitignore  Makefile  README.md  alembic.ini  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker-image.yml  general-ci.yml
alembic/: env.py
alembic/versions/: 084aefa59369_create_html_table.py  0e0b9e75aec5_entity_post.py  4512fea8e9e1_entity_vote.py  5bb005ec46c3_post__owner_id.py  a7b40d90fcea_entity_user.py
service/: Dockerfile  __init__.py  __main__.py  config.py  database.py  exceptions.py  models.py  oauth2.py  requirements.txt  schemas.py
service/routers/: auth.py  healthcheck.py  post.py  user.py  vote.py
service/schemas/: __init__.py  misc.py  post.py  user.py  vote.py
tests/: conftest.py  test_all.py  test_client.py  test_db_session.py  test_ping.py  test_post.py  test_test.py  test_users.py
tryFastAPI/: Dockerfile  __init__.py  __main__.py  crud.py  database.py  main.py  models.py  requirements.txt  schemas.py
tryFastAPI/crud/: __init__.py  html.py
tryFastAPI/db/: __init__.py  database.py  db_url_builder.py
tryFastAPI/db/connection/: session.py
tryFastAPI/db/models/: __init__.py  html.py
tryFastAPI/db/utils/: db_url_builder.py
tryFastAPI/endpoints/: __init__.py  http.py  ping.py
tryFastAPI/schemas/: __init__.py  html.py  ping.py  simple.py
