[tool.poetry]
name = "tryfapi"
version = "0.1.0"
description = ""
authors = ["sentenzo <kassiyskley@rambler.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
SQLAlchemy = "^1.4.41"
psycopg2 = "^2.9.3"
alembic = "^1.8.1"
asyncpg = "^0.26.0"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
pytest = "^7.1.3"
python-dotenv = "^0.21.0"
SQLAlchemy-Utils = "^0.38.3"
requests = "^2.28.1"
pytest-asyncio = "^0.20.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
